# RS

./: .Rbuildignore  .Rprofile  .air.toml  .gitignore  404.html  Cargo.toml  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  bench.R  classes.py  foo.py  foos.py  index.html  pkgdown.yml  playground.R  profile.R  profile.sh  search.json  sitemap.xml
.github/workflows/: site.yaml
R/: RS-package.R  az.R  bench.R  class.R  class1.R  classmap.R  decorators.R  extendr-wrappers.R  types.R  utils.R
articles/: Benchmarks.html  Dataframes.html  Operators.html  Overview.html  Types.html  index.html
man/: Array-type..Rd  Class.Rd  RS-package.Rd  RSTypes.Rd  chatgpt.Rd  colon-equals.Rd  grapes-colon-grapes.Rd  is_private.Rd  is_static.Rd  private.Rd  private_.Rd  static.Rd  static_.Rd  structure_.Rd
reference/: Class.html  RS-package.html  RS.html  RSTypes.html  chatgpt.html  colon-equals.html  index.html  is_private.html  is_static.html  private.html  private_.html  static.html  static_.html  structure_.html  t_any.html  t_dates.html
src/: Makevars  Makevars.win  containers-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs  maps.rs  types.rs
tests/: testthat.R
tests/testthat/: test-class.R  test-types.R
vignettes/: Benchmarks.qmd  Dataframes.qmd  Operators.qmd  Overview.qmd  Types.qmd
