[package]
name = 'RS'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'RS'

[dependencies]
extendr-api = { version = "0.8.0", features = ['non-api'] }
mimalloc = "0.1.46"
# ahash = "0.8.12"
# bincode = "2.0.1"
# serde = { version = "1.0.219", features = ['derive'] }

[profile.release]
debug = true
lto = "fat"
opt-level = 3
incremental = false
codegen-units = 1
