[package]
name = 'RS'
version = '0.1.0'
edition = '2024'


[lib]
crate-type = ['staticlib']
name = 'RS'


[dependencies.extendr-api]
version = '0.8.0'
features = ['non-api', 'serde']


[dependencies]
mimalloc = "0.1.46"
serde_json = "1.0.140"


[profile.release]
debug = true
lto = "fat"
opt-level = 3
incremental = false
codegen-units = 1
